--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,1 @@
-<footer class="container border-top border-2 text-center border-dark noto-tc-sans py-32">© 7TAO七逃. All Rights Reserved</footer>
+<footer class="container border-top border-2 text-center border-dark noto-tc-sans py-32 fs-md-16 fs-14">© 7TAO七逃. All Rights Reserved</footer>
