--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,7 +1,7 @@
 <link rel="shortcut icon" href="/assets/images/logo.png">
 
 <div class="container  border-bottom border-2 border-dark">
-    <div class="d-flex align-items-center justify-content-between mt-24 pb-24">
+    <div class="d-flex align-items-center justify-content-between mt-md-24 mt-12 pb-md-24 pb-12">
         <div class="d-flex align-items-center gap-lg-16 me-25">
             <a href="index.html"><img src="/assets/images/logo.png" alt="logo" width="53" height="53"></a>
             <a href="index.html" class="d-flex text-primary align-items-center gap-lg-16">
