--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,6 +1,6 @@
 <link rel="shortcut icon" href="/assets/images/logo.png">
 
-<div class="container  border-bottom border-2 border-dark">
+<div class="container  border-bottom border-2 border-dark   position-relative">
     <div class="d-flex align-items-center justify-content-between mt-md-24 mt-12 pb-md-24 pb-12">
         <div class="d-flex align-items-center gap-lg-16 me-25">
             <a href="index.html"><img src="/assets/images/logo.png" alt="logo" width="53" height="53"></a>
@@ -9,8 +9,8 @@
                 <p class="mb-0 d-lg-block d-none fw-bold noto-tc-serif">活動訂票網</p>
             </a>
             <div class="ms-16 position-relative">
-                <input class="form-control header-input form-control-lg border-dark search" type="text" placeholder="探索活動"
-                    aria-label=".form-control-lg" height="53">
+                <input class="form-control header-input form-control-lg border-dark search" type="text"
+                    placeholder="探索活動" aria-label=".form-control-lg" height="53">
                 <div class="box position-absolute top-0 end-0 d-flex justify-content-center align-items-center">
                     <i class="icofont-search-1 text-secondary h5"></i>
                 </div>
@@ -40,22 +40,22 @@
             </a>
         </div>
 
-    </div>
-</div>
 
-<!-- hamburgerMenu -->
-<div class="container collapse position-absolute border-bottom border-2 border-dark bg-custom d-md-none"
-    id="hamburgerMenu" style="z-index: 10000;">
-    <ul class="list-unstyled py-4 bg-custom">
-        <li class="mt-24">
-            <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
-                <i class="me-4 icofont-ui-file"></i>REGISTER
-            </a>
-        </li>
-        <li class="mt-16">
-            <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
-                <i class="me-4 icofont-ui-user"></i>LOGIN
-            </a>
-        </li>
-    </ul>
+    </div>
+    <!-- hamburgerMenu -->
+    <div class="container collapse position-absolute border-bottom border-2 border-dark bg-custom d-md-none  start-0 mx-0"
+        id="hamburgerMenu" style="z-index: 10000;top:105%;">
+        <ul class="list-unstyled bg-custom">
+            <li class="mt-24 pt-0">
+                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
+                    <i class="me-4 icofont-ui-file"></i>REGISTER
+                </a>
+            </li>
+            <li class="mt-16">
+                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
+                    <i class="me-4 icofont-ui-user"></i>LOGIN
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
