--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -390,9 +390,7 @@ $spacers: (
   40: $spacer * 2.5,  //40px
   48: $spacer * 3,    //48px
   60: $spacer * 3.75, //60px
-  88: 88px, //60px
-  175:175px,
-  264:264px
+  88: 88px //60px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
