--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,7 +1,7 @@
 <link rel="shortcut icon" href="/assets/images/logo.png">
-
-<div class="container  border-bottom border-2 border-dark   position-relative">
-    <div class="d-flex align-items-center justify-content-between mt-md-24 mt-12 pb-md-24 pb-12">
+<nav class="nav border-primary border-bottom border-md-3 border-2 mt-md-24 mt-12 position-relative">
+<div class="container">
+    <div class="d-flex align-items-center justify-content-between  pb-md-24 pb-12">
         <div class="d-flex align-items-center gap-lg-16 me-25">
             <a href="index.html"><img src="/assets/images/logo.png" alt="logo" width="53" height="53"></a>
             <a href="index.html" class="d-flex text-primary align-items-center gap-lg-16">
@@ -17,14 +17,14 @@
             </div>
         </div>
 
-        <div class="d-md-inline-flex gap-14 d-none">
-            <a href="#" class="text-primary hover-text-yellow">
+        <div class="d-md-inline-flex gap-24 d-none">
+            <a href="#" class="text-primary hover-text-red">
                 <div class="d-inline-flex align-items-center gap-4">
                     <i class="icofont-ui-file"></i>
                     <p class="mb-0 fs-18">REGISTER</p>
                 </div>
             </a>
-            <a href="login.html" class="text-primary hover-text-yellow">
+            <a href="login.html" class="text-primary hover-text-red">
                 <div class="d-inline-flex align-items-center gap-4">
                     <i class="icofont-ui-user"></i>
                     <p class="mb-0 fs-18">LOGIN</p>
@@ -47,15 +47,16 @@
         id="hamburgerMenu" style="z-index: 10000;top:105%;">
         <ul class="list-unstyled bg-custom">
             <li class="mt-24 pt-0">
-                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
+                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-red">
                     <i class="me-4 icofont-ui-file"></i>REGISTER
                 </a>
             </li>
             <li class="mt-16">
-                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-yellow">
+                <a href="login.html" class="d-flex align-items-center text-primary fs-18 hover-text-red">
                     <i class="me-4 icofont-ui-user"></i>LOGIN
                 </a>
             </li>
         </ul>
     </div>
 </div>
+</nav>
